--- a/sass/lightmode.scss
+++ b/sass/lightmode.scss
@@ -295,6 +295,11 @@ footer {
 .initial {
   cursor: initial;
 }
+.enter {
+  background-color: $Very-Dark-Grayish-Blue-3;
+  border-radius: 10px;
+}
+
 // ########### media query (light-theme medium-screen) ###########
 @media screen and (min-width: 769px) and (max-width: 1024px) {
   body {
@@ -364,7 +369,10 @@ footer {
   .list-text {
     cursor: pointer;
   }
-
+  .drag {
+    cursor: grabbing;
+    opacity: 0.3;
+  }
   // .list-text:hover + button {
   //   visibility: visible;
   // }
@@ -465,6 +473,10 @@ footer {
 
   .list-text {
     cursor: pointer;
+  }
+  .drag {
+    cursor: grabbing;
+    opacity: 0.3;
   }
 
   .list-text:hover + button {
